--- a/ang/src/app/components/user/login/login.component.html
+++ b/ang/src/app/components/user/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-12 col-xl-5 col-lg-6 col-md-8 col-sm-10 mr-auto ml-auto">
       <form class="shadowBox" (ngSubmit)="onLoginSubmit()" #login="ngForm">
-        <h2>Login</h2>
+        <h2>Login</h2><span class="p"><a routerLink="/register">Not Registered? </a></span>
         <hr>
         <div class="form-group">
           <label for="f_name">Username</label>
