--- a/ang/src/app/components/user/register/register.component.html
+++ b/ang/src/app/components/user/register/register.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-12 col-xl-5 col-lg-6 col-md-8 col-sm-10 mr-auto ml-auto">
       <form class="shadowBox" (ngSubmit)="onRegisterSubmit()" #register="ngForm">
-        <h2>Register</h2>
+        <h2>Register</h2><span class="p">Already registered? <a routerLink="/login">Login</a></span>
         <hr>
         <div class="form-group">
           <label for="f_name">First Name</label>
