--- a/ang/src/app/components/user/profile/profile.component.html
+++ b/ang/src/app/components/user/profile/profile.component.html
@@ -39,6 +39,7 @@
       </div>
     </div>
     <div class="col-7 ml-auto">
+      <button class="btn btn-primary" (click)="resetBlockchain()">Reset Blockchain Data</button>
       <h2 class="display-4">My Questions</h2>
       <form (ngSubmit)="onQuestionSubmit()" #question="ngForm">
           <div class="form-group">
