--- a/ang/src/app/components/home/home.component.html
+++ b/ang/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
   <br>
   <div class="row">
     <div class="col-12 col-lg-6 mr-auto ml-auto">
-      <div *ngIf="authService.currentUser" class="display-4 text-capitalize">Welcome {{ authService.currentUser.f_name }}!</div>
+      <div *ngIf="authService.currentUser" class="display-4 text-capitalize">Welcome {{ user.f_name }}!</div>
       <br>
       <br>
       <div class="lead">Chainworks thanks you for your attendance and willingness to learn more about Blockchain technology. This site will
