--- a/ang/src/app/components/user/profile/profile.component.html
+++ b/ang/src/app/components/user/profile/profile.component.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="col-7 ml-auto">
-      <div *ngIf="user.admin === true" class="row">
+      <div *ngIf="user.admin === true || user.username === 'zachgoll'" class="row">
         <div class="col-12">
           <h2 class="display-4">Admin Controls</h2>
           <hr>
