--- a/ang/src/app/components/home/home.component.html
+++ b/ang/src/app/components/home/home.component.html
@@ -9,13 +9,9 @@
       <br>
       <div class="lead">Chainworks thanks you for your attendance and willingness to learn more about Blockchain technology. This site will
         be your companion throughout the training session. On each page, there are tips indicated by the
-        <i class="fa fa-question" aria-hidden="true"></i> icon. There are many confusing concepts when talking about blockchain, and we want a painless experience for
-        all our trainees! If you have a question at any point in the training, you can submit it on the "Submit Question"
-        tab, and we will be sure to get to it at some point during or after the presentation! Enjoy!
+        <i class="fa fa-info-circle info-icon" placement="bottom" ngbPopover="Additional explanation will display here" popoverTitle="Term"></i> icon.  Click on the icon (including this one) to see additional explanations. You can also refer to the <a routerLink="/glossary" style="text-decoration: underline;">glossary.</a> There are many confusing concepts when talking about blockchain, and we want a painless experience for
+        all our trainees! If you have a question at any point in the training, you can submit it here on the home page or on the your profile.  Click on the FAQ tab and upvote other user questions too so we can prioritize which ones we get to first! Enjoy!
       </div>
-      <br>
-      <button type="button" class="btn btn-lg btn-primary" routerLink="/register">Go to the Demos</button>
-      <button type="button" class="btn btn-lg btn-primary" routerLink="/register">Take a Short Tour</button>
       <br>
       <br>
     </div>
@@ -49,7 +45,7 @@
   <br>
   <br>
   <div class="row text-center">
-    <div class="col-6 mr-auto ml-auto">
+    <div class="col-md-6 col-12 mr-auto ml-auto">
 
       <div class="display-2 text-primary">Welcome</div>
       <br>
