--- a/ang/src/app/components/presentation-resources/hash-demo/hash-demo.component.html
+++ b/ang/src/app/components/presentation-resources/hash-demo/hash-demo.component.html
@@ -2,7 +2,7 @@
   <br>
   <div class="row text-center">
     <div class="col-12 col-lg-8 mr-auto ml-auto">
-      <h2>Hash Demo (SHA256)</h2>
+      <h2>Hash Demo (SHA256) <i class="fa fa-info-circle info-icon" placement="bottom" ngbPopover="A popular hashing algorithm designed and developed by the NSA and used for a variety of functions including mining/hashing in Bitcoin." popoverTitle="SHA256 Hash"></i></h2>
     </div>
   </div>
   <br>
@@ -26,7 +26,7 @@
   <div class="row">
     <div class="col-12 col-lg-8 mr-auto ml-auto">
       <div class="row text-center">
-        <div class="col-12 col-md-4 h2">Deterministic</div>
+        <div class="col-12 col-md-4 h2">Deterministic <i class="fa fa-info-circle info-icon" placement="bottom" ngbPopover="An algorithm which, given a particular input, will always produce the same output." popoverTitle="Deterministic"></i></div>
         <div class="col-12 col-md-4 h2">Irreversible</div>
         <div class="col-12 col-md-4 h2">Constant Size</div>
       </div>
