--- a/ang/src/app/components/blockchain-demo/blockchain/blockchain.component.css
+++ b/ang/src/app/components/blockchain-demo/blockchain/blockchain.component.css
@@ -24,3 +24,14 @@
     border: dashed rgba(49,42,68,1) 1px;
 }
 
+.mined-by {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.mined-by-image {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
