--- a/ang/src/app/components/user/profile/profile.component.css
+++ b/ang/src/app/components/user/profile/profile.component.css
@@ -2,6 +2,11 @@
     width: 100%;
     position: relative;
     display: inline-block;
+    border-radius: 10px;
+  }
+
+  .carder {
+      border:none !important;
   }
   
   .pic:hover > .overlay {
@@ -9,6 +14,7 @@
       top: 0;
       width:100%;
       height:100%;
+      border-radius: 10px;
       left: 0;
       background-color:#000;
       opacity:0.5;
