--- a/ang/src/app/components/faq/faq.component.html
+++ b/ang/src/app/components/faq/faq.component.html
@@ -7,6 +7,7 @@
       <ul class="list-group">
         <li *ngFor="let q of sessionQuestions; let i = index;" class="list-group-item d-flex align-items-center">
           <span class="mr-auto p-8 text-primary">{{ q.question }}</span>
+          <span *ngIf="user.admin === true" class="p-4 text-primary">{{ q.userName }}</span>
           <span class="badge badge-primary badge-pill text-white p-2"> {{ q.upvotes }}</span>
           <span *ngIf="!sessionQuestions[i].subbed" class="text-secondary p-2"><i class="fa fa-chevron-up upvote" (click)="voteSession(i)"></i></span>
           <span *ngIf="sessionQuestions[i].subbed" class="text-secondary p-2"><i class="fa fa-chevron-up upvote voted" (click)="unsub(i)"></i></span>
